--- a/Proyectos/DataCenter/view/contenidoHTML.html
+++ b/Proyectos/DataCenter/view/contenidoHTML.html
@@ -4,3 +4,17 @@
 <div id="mensajeError1" class="toast-error" style="display: none;">
     <p>Por favor, complete todos los campos.</p>
 </div>
+
+<!--Este toast es para cuando empecemos a implementar la base de datos-->
+<div id="mensajeError2" class="toast-error" style="display: none;">
+    <p>Numero de documento no existe</p>
+</div>
+
+<!--Estos mensajes de error es para las firmas-->
+<div id="mensajeError3" class="toast-error" style="display: none;">
+    <p>Por favor ingrese la firma del usuario/p>
+</div>
+
+<div id="mensajeError4" class="toast-error" style="display: none;">
+    <p>Por favor ingrese la firma del responsable</p>
+</div>
