feat añadiendo dinamica Canvas

--- a/Proyectos/DataCenter/view/contenidoHTML.html
+++ b/Proyectos/DataCenter/view/contenidoHTML.html
@@ -2,7 +2,7 @@
 
 <!--Toasts-->
 <div id="mensajeError1" class="toast-error" style="display: none;">
-    <p>Por favor, complete todos los campos.</p>
+    <p>Por favor, complete los campos.</p>
 </div>
 
 <!--Este toast es para cuando empecemos a implementar la base de datos-->
