feat factorizando codigo, añadiendo mensajes error

--- a/Proyectos/DataCenter/view/contenidoHTML.html
+++ b/Proyectos/DataCenter/view/contenidoHTML.html
@@ -1,20 +1,18 @@
 <!--Aqui vamos a colocar las ventanas emergentes etc y las llamaremos con promises-->
 
-<!--Toasts-->
-<div id="mensajeError1" class="toast-error" style="display: none;">
-    <p>Por favor, complete los campos.</p>
+<div id="mensajeError" class="toast toast-error">
+    <p>Por favor, complete ambas firmas.</p>
 </div>
 
-<!--Este toast es para cuando empecemos a implementar la base de datos-->
-<div id="mensajeError2" class="toast-error" style="display: none;">
-    <p>Numero de documento no existe</p>
+<div id="mensajeErrorDocumento" class="toast toast-error">
+    <p>El número de documento no existe.</p>
 </div>
 
-<!--Estos mensajes de error es para las firmas-->
-<div id="mensajeError3" class="toast-error" style="display: none;">
-    <p>Por favor ingrese la firma del usuario/p>
+<div id="mensajeEspera" class="toast toast-warning">
+    <p>Validando datos, por favor espere...</p>
 </div>
 
-<div id="mensajeError4" class="toast-error" style="display: none;">
-    <p>Por favor ingrese la firma del responsable</p>
+
+<div id="mensajeAfirmativo" class="toast toast-success">
+    <p>¡Datos validados con éxito!</p>
 </div>
